<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LengthFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/value_to_convert" />

            <EditText
                android:id="@+id/txtInitialArea"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/base_value_to_convert"
                android:inputType="number|numberDecimal"
                android:textColorHint="#546E7A" />
        </LinearLayout>

        <TextView
            android:id="@+id/lblConvertFromArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/convert_from" />
        <RadioGroup
            android:id="@+id/grpConvertFromArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/btnFromSqM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="48dp"
                android:text="@string/square_m"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <RadioButton
                android:id="@+id/btnFromSqCM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="48dp"
                android:text="@string/square_cm"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <RadioButton
                android:id="@+id/btnFromSqKM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="48dp"
                android:text="@string/square_km"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <RadioButton
                android:id="@+id/btnFromSqMi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="48dp"
                android:text="@string/square_mi"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <RadioButton
                android:id="@+id/btnFromSqYard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="48dp"
                android:text="@string/square_y"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <RadioButton
                android:id="@+id/btnFromSqFeet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="48dp"
                android:text="@string/square_f"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <RadioButton
                android:id="@+id/btnFromSqInch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="48dp"
                android:text="@string/square_in"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <RadioButton
                android:id="@id/btnFromAcre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="48dp"
                android:text="@string/acre"
                tools:ignore="DuplicateSpeakableTextCheck" />

        </RadioGroup>

        <TextView
            android:id="@+id/lblConvertToArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/convert_to" />

        <RadioGroup
            android:id="@+id/grpConvertToArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/btnToSqM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="48dp"
                android:text="@string/square_m" />

            <RadioButton
                android:id="@+id/btnToSqCM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="48dp"
                android:text="@string/square_cm" />

            <RadioButton
                android:id="@+id/btnToSqKM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="48dp"
                android:text="@string/square_km" />

            <RadioButton
                android:id="@+id/btnToSqMi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="48dp"
                android:text="@string/square_mi" />

            <RadioButton
                android:id="@+id/btnToSqYard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="48dp"
                android:text="@string/square_y" />

            <RadioButton
                android:id="@+id/btnToSqFeet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="48dp"
                android:text="@string/square_f" />

            <RadioButton
                android:id="@+id/btnToSqInch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/square_in" />

            <RadioButton
                android:id="@id/btnToAcre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="48dp"
                android:text="@string/acre" />

        </RadioGroup>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/converted_to" />

            <TextView
                android:id="@+id/txtResultArea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btnClearArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clear" />
    </LinearLayout>
</FrameLayout>