<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LengthFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/value_to_convert" />

            <EditText
                android:id="@+id/txtInitialLen"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/base_value_to_convert"
                android:inputType="number|numberDecimal"
                android:textColorHint="#546E7A" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Convert From" />

        <RadioGroup
            android:id="@+id/grpConvertFromLen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <RadioButton
                    android:id="@+id/btnFromMeter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/m" />

        <RadioButton
                    android:id="@+id/btnFromCM"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cm" />

        <RadioButton
                    android:id="@+id/btnFromKM"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/km" />

                <RadioButton
                    android:id="@+id/btnFromMi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/mi" />

                <RadioButton
                    android:id="@+id/btnFromYard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/y" />

                <RadioButton
                    android:id="@+id/btnFromFeet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/f" />

                <RadioButton
                    android:id="@+id/btnFromInch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/in" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Convert To" />

        <RadioGroup
            android:id="@+id/grpConvertToLen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <RadioButton
                    android:id="@+id/btnToMeter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/m" />

                <RadioButton
                    android:id="@+id/btnToCM"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cm" />

                <RadioButton
                    android:id="@+id/btnToKM"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/km" />

                <RadioButton
                    android:id="@+id/btnToMi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/mi" />

                <RadioButton
                    android:id="@+id/btnToYard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/y" />

                <RadioButton
                    android:id="@+id/btnToFeet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/f" />

                <RadioButton
                    android:id="@+id/btnToInch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/in" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Converted to: " />

            <TextView
                android:id="@+id/txtResultLen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btnClearLen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Clear" />

    </LinearLayout>
</FrameLayout>